--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
