--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
+    "react-phone-number-input": "^3.4.5",
     "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
