--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
