--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@smastrom/react-rating": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.1.8",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.3.31",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
